# qt-nasa-systray

./: CMakeLists.txt  README.md  compile.bat
api_handler/: CMakeLists.txt  IApiHandler.cpp  IApiHandler.h
api_handler/inc/: ApiHandlerImpl.h  ApiParser.h
api_handler/src/: ApiHandlerImpl.cpp  ApiParser.cpp
icons/: systray.qrc
inc/: window.h
libcurl/cmake/: FindLIBCURL.cmake
libcurl/lib/: libcurl.exp
qt-nasa-systray/: CMakeLists.txt  qt-nasa-systray.cpp  qt-nasa-systray.h
src/: CMakeLists.txt  main.cpp  window.cpp
