# CMakeList.txt : CMake project for qt-nasa-systray, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (qt-nasa-systray "qt-nasa-systray.cpp" "qt-nasa-systray.h")

# TODO: Add tests and install targets if needed.
